--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png">
     </div>
     <nav>
-      <span>Mission</span>
-        <span>Featured Tea</span>
-          <span>Locations</span>
+      <span><a href="#">Mission</a></span>
+      <span><a href="#">Featured Tea</a></span>
+      <span><a href="#">Locations</a></span>
       </nav>
   </header>
 
